@@ -283,7 +283,9 @@ ul.woocommerce-info {
 /* Products */
 .tb-product {
 	margin-bottom: 30px;
+	position: relative;
 	text-align: center;
+	z-index: 1;
 }
 .tb-product > a:first-child,
 .tb-product > a:first-child:hover {
@@ -357,7 +359,8 @@ ul.woocommerce-info {
 	opacity: 1;
 	filter: alpha(opacity=100);
 }
-.tb-product h3 {
+.tb-product h3, /* h3 is @deprecated as WC v3.0*/
+.tb-product h2 {
 	font-size: 14px;
 	margin: 0 0 5px 0;
 }
@@ -607,11 +610,9 @@ ul.woocommerce-info {
 	.rtl .tb-product-wrap .product-wrap-inner > .summary {
 		float: right;
 	}
-	.tb-product-wrap .product-wrap-inner > .images {
-		width: 33%;
-	}
+	.tb-product-wrap .product-wrap-inner > .images,
 	.tb-product-wrap .product-wrap-inner > .summary {
-		width: 66%;
+		width: 50%;
 	}
 }
 
@@ -630,7 +631,49 @@ ul.woocommerce-info {
 	margin-bottom: 0;
 }
 
-/* Thumbnails */
+/* Gallery (WooCommerce v3.0+) */
+.woocommerce-product-gallery {
+    position: relative;
+}
+.woocommerce-product-gallery img {
+    display: block;
+}
+.woocommerce-product-gallery__trigger {
+    position: absolute;
+    top: 10px;
+    right: 30px; /* Extra from right to offset gutter of container, which has the relative positioning. */
+    z-index: 99;
+}
+.woocommerce-product-gallery .flex-control-thumbs li {
+	cursor: pointer;
+	float: left;
+    list-style: none;
+}
+.rtl .woocommerce-product-gallery .flex-control-thumbs li {
+	float: right;
+}
+.woocommerce-product-gallery--columns-2 .flex-control-thumbs li {
+	width: 50%;
+}
+.woocommerce-product-gallery--columns-3 .flex-control-thumbs li {
+	width: 33.33333%;
+}
+.woocommerce-product-gallery--columns-4 .flex-control-thumbs li {
+	width: 25%;
+}
+.woocommerce-product-gallery--columns-5 .flex-control-thumbs li {
+	width: 20%;
+}
+.woocommerce-product-gallery .flex-control-thumbs img {
+    opacity: .5;
+}
+.woocommerce-product-gallery .flex-control-thumbs img.flex-active,
+.woocommerce-product-gallery .flex-control-thumbs img:hover,
+.woocommerce-product-gallery .flex-control-thumbs img:focus {
+    opacity: 1;
+}
+
+/* Thumbnails - @depracted as of WC 3.0+ */
 .tb-product-wrap .thumbnails {
 	margin: 2% -1% 0 -1%;
 }
@@ -638,6 +681,9 @@ ul.woocommerce-info {
 	display: inline-block;
 	margin: 1%;
 	width: 18%;
+}
+.tb-product-wrap .thumbnails > a > img {
+	width: 100%;
 }
 @media screen and (min-width: 768px) {
 	.tb-product-wrap .thumbnails {
@@ -1543,6 +1589,11 @@ ul.woocommerce-info {
 .widget .product_list_widget li > a:not(:hover) {
 	color: inherit;
 }
+.widget .product_list_widget li>.amount {
+    display: inline-block;
+	font-size: 12px;
+	margin-top: 5px;
+}
 .content_dark .text-dark .widget .product_list_widget li > a {
 	color: #333333;
 }
@@ -1728,6 +1779,12 @@ ul.woocommerce-info {
 }
 .widget_shopping_cart .product_list_widget li > a.remove:hover {
 	color: #c88;
+}
+.widget_shopping_cart .buttons .button {
+	margin: 0 5px 5px 0;
+}
+.widget_shopping_cart .buttons .button:last-child {
+	margin-bottom: 0;
 }
 
 /* Floating Cart (trigger) */
