@@ -4,6 +4,13 @@ Jump Start Changelog
 2.1.6 - XX/XX/XXXX
 ------------------
 
+* WooCommerce v3 compatibility.
+	* New: Implemented new product gallery features, only available in WooCommerce v3+.
+	* Improvement: Product gallery and content now displayed at 50% width each; this better suites new gallery features.
+	* Fixed: Spacing on buttons in shopping cart widget.
+	* Fixed: Product titles on shop view too large.
+	* Fixed: Star ratings no longer showing on product thumbnails in shop view.
+	* Removed: Theme's Magnific Popup for product thumbnails.
 * Fixed: WPML switcher displaying when disabled in some instances.
 
 2.1.5 - 03/10/2017
